--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zahara</title>
+    <link rel="icon" type="image/png" href="/code.png" />
+    <title>Zahara's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
